Modified Event Maps, photo album and RSVP form

--- a/wedding/templates/pages/rsvp_form.html
+++ b/wedding/templates/pages/rsvp_form.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block content %}
-    <form method="post" action="" enctype="multipart/form-data">
+    <form method="post" action="/homepage/rsvp/" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Update">
+        <input type="submit" value="Submit">
     </form>
 {% endblock content %}
