--- a/wedding/templates/pages/page_detail.html
+++ b/wedding/templates/pages/page_detail.html
@@ -1,7 +1,9 @@
 {% extends "pages/page_list.html" %}
 
 {% block navbar_right %}
-    <li><a href="{% url 'page_update' slug=object.slug %}">Edit Page</a></li>
+    {% if user.is_authenticated %}
+        <li><a href="{% url 'page_update' slug=object.slug %}">Edit Page</a></li>
+    {% endif %}
 {% endblock navbar_right %}
 
 {% block sidebar %}
@@ -16,4 +18,13 @@
 
 {% block content %}
     {{ object.body | safe | linebreaks}}
+
+    {% if page.title == 'RSVP' %}
+        <form method="post" action="/homepage/rsvp/thanks" enctype="multipart/form-data">
+            {% csrf_token %}
+            First Name: <input type="text" name="first_name"><br><br>
+            Last Name: <input type="text" name="last_name"><br><br>
+            <input type="submit" value="Submit">
+        </form>
+    {% endif %}
 {% endblock content %}
