Modified Photo Gallery and Map View

--- a/wedding/templates/base.html
+++ b/wedding/templates/base.html
@@ -39,7 +39,7 @@
         </li>
         </ul>
         <h3 class="text-muted"><a href='/' style='text-decoration: none;'><b>Wedding Bells</b></a></h3>
-        <h2 class='mark text-center text-success'>Jack & Jill Wedding, 25th Dec 2014</h2>
+        {% block heading %} {% endblock %}
       </div>
 
         <div class="row">
