--- a/wedding/templates/pages/page_list.html
+++ b/wedding/templates/pages/page_list.html
@@ -2,15 +2,19 @@
 
 {% block navbar_right %}
     {% if logged_user.is_authenticated %}
-        <li><a href="{% url 'page_update' username=logged_user.username slug=object_list.values.0.slug %}">Edit Page</a></li>
         <li><a href="{% url 'account_logout' %}">Logout</a></li>
     {% endif %}
 {% endblock navbar_right %}
 
+{% block heading %}
+    <h2 class='mark text-center text-success'>Jack and Jill Wedding</h2>
+{% endblock %}
+
 {% block sidebar %}
-    {{object_list.values.title}}
     {% for page in object_list.values %}
-        <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a>
+        {% if page.title != 'HomePage' %}
+            <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a>
+        {% endif %}
     {% endfor %}
 {% endblock sidebar %}
 
@@ -20,6 +24,11 @@
 
 
 {% block content %}
+Hello
+{{object_list}}
+Hi
+{{username}}
+Hey
     {% if object_list.values.0.image == '' %}
         {% if object_list.values.0.title == 'Welcome' %}
             <img src="{{MEDIA_URL}}images/default_welcome.jpg" width="540" height="320" alt="" title=""/>
@@ -28,7 +37,6 @@
         {% if object_list.values.0.title == 'Welcome' %}
             <img src="{{MEDIA_URL}}{{object_list.values.0.image}}" width="540" height="320" alt="" title=""/>
         {% endif %}
-
     {% endif %}
 
     {{ object_list.values.0.body | safe | linebreaks}}
