--- a/wedding/templates/pages/page_detail.html
+++ b/wedding/templates/pages/page_detail.html
@@ -7,9 +7,15 @@
     {% endif %}
 {% endblock navbar_right %}
 
+{% block heading %}
+    <h2 class='mark text-center text-success'>Jack and Jill Wedding</h2>
+{% endblock %}
+
 {% block sidebar %}
     {% for page in all_objects %}
-        <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a>
+        {% if page.title != 'HomePage' %}
+            <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a>
+        {% endif %}
     {% endfor %}
 {% endblock %}
 
