--- a/wedding/templates/photologue/photo_list.html
+++ b/wedding/templates/photologue/photo_list.html
@@ -4,19 +4,23 @@
 {% block title %}Photo Album{% endblock %}
 
 {% block navbar_right %}
-    {% if object_list_len > 20 %}
-        <li style="color:white;"><a href="">Max Photos Added</a></li>
-    {% else %}
-        <li><a href="/homepage/photo-album/create/{{logged_user.username}}">Add Photos (Max: 20)</a></li>
+    {% if logged_user.is_authenticated %}
+        {% if object_list_len > 20 %}
+            <li style="color:white;"><a href="">Max Photos Added</a></li>
+        {% else %}
+            <li><a href="/homepage/photo-album/create/{{logged_user.username}}">Add Photos (Max: 20)</a></li>
+        {% endif %}
     {% endif %}
 {% endblock navbar_right %}
 
 {% block sidebar %}
     {% for page in page_list %}
-        {% if page.title == 'Photo Album' %}
-            <a href="{% url 'gallery' username=logged_user.username %}">{{page.title}}</a>
-        {% else %}
-            <a href="{% url 'page_detail' username=logged_user.username slug=page.slug %}">{{page.title}}</a>
+        {% if page.title != 'HomePage' %}
+            {% if page.title == 'Photo Album' %}
+                <a href="{% url 'gallery' username=username %}">{{page.title}}</a>
+            {% else %}
+                <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+            {% endif %}
         {% endif %}
     {% endfor %}
 {% endblock sidebar %}
@@ -27,7 +31,7 @@
         <div style="width: 700px;">
             <div class="gallery-photo" style="float: left; width: 150px;">
                 <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a>
-                {% if user.is_authenticated %}
+                {% if logged_user.is_authenticated %}
                     <form action="{% url 'photo_update' username=logged_user.username pk=photo.pk %}">
                         <input type="submit" value="Edit Photo">
                     </form>
