--- a/wedding/templates/index.html
+++ b/wedding/templates/index.html
@@ -8,7 +8,7 @@
 {% block sidebar %}
     {% for page in wedding_pages %}
         {% if page != 'HomePage' %}
-            <a href='#'>{{page}}</a>
+            <a href=''>{{page}}</a>
         {% endif %}
     {% endfor %}
 {% endblock %}
