--- a/wedding/templates/pages/address_list.html
+++ b/wedding/templates/pages/address_list.html
@@ -1,13 +1,26 @@
 {% extends 'base.html' %}
 {% load split %}
 {% load easy_maps_tags cache %}
+{% load date_diff %}
 
 {% block title %}Map of Events{% endblock title %}
 
+{% block heading %}
+    <h2 class= 'text-center'>
+        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
+        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
+        {% if logged_user.is_authenticated %}
+            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+        {% endif %}
+    </h2>
+{% endblock %}
+
 {% block sidebar %}
     {% for page in page_list %}
-        {% if page.title != 'HomePage' %}
-            <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+        {% if logged_user.is_authenticated %}
+            <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+        {% elif page.title != 'HomePage' %}
+            <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
         {% endif %}
     {% endfor %}
 {% endblock sidebar %}
@@ -22,7 +35,7 @@
                     {{address}}<br>
                     {% if logged_user.is_authenticated %}
                         <form>
-                            <input type="button" value="Edit Address" onClick="window.location.href='/homepage/address/edit/{{logged_user}}/{{map_of_events.pk}}'">
+                            <a href="{% url 'address_update' username=username pk=map_of_events.pk %}" class="btn btn-primary">Edit</a>
                         </form>
                     {% endif %}
                 </div>
