--- a/wedding/templates/pages/page_detail.html
+++ b/wedding/templates/pages/page_detail.html
@@ -1,39 +1,43 @@
 {% extends "pages/page_list.html" %}
+{% load date_diff %}
 
 {% block navbar_right %}
     {% if logged_user.is_authenticated %}
-        <li><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}">Edit Page</a></li>
-        <li><a href="{% url 'account_logout' %}">Logout</a></li>
+        {% if page.title != 'HomePage' %}
+            <li><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}" class="btn btn-primary">Edit Page</a></li>
+        {% endif %}
+        <li><a href="{% url 'account_logout' %}" class="btn btn-primary">Logout</a></li>
     {% endif %}
 {% endblock navbar_right %}
 
 {% block brand %}<a href='/' class="navbar-brand">Wedding Bells</a>{% endblock %}
 
-{% block heading %}
-    <h2 class='mark text-center text-success'>
-        {{wedding_objects.values.0.groom_first_name}} &  {{wedding_objects.values.0.bride_first_name}} Wedding<br>
-        {{wedding_objects.values.0.wedding_date}}
-    </h2>
-{% endblock %}
-
 {% block sidebar %}
     {% for page in all_objects %}
-        {% if page.title != 'HomePage' %}
-            <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+        {% if logged_user.is_authenticated %}
+            <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+        {% elif page.title != 'HomePage' %}
+            <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
         {% endif %}
     {% endfor %}
 {% endblock %}
 
-{% block title %}
-    {{ object.title }}
-{% endblock title%}
+{% block heading %}
+    <h2 class='text-center'>
+        {{wedding_objects.values.0.groom_first_name |capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
+        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!
+        {% if logged_user.is_authenticated %}
+            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+        {% endif %}
+    </h2>
+{% endblock %}
 
 {% block content %}
     {% if object.image == '' %}
         {% if object.title == 'Welcome' %}
-            <img src="{{MEDIA_URL}}images/default/default_welcome.jpg" width="540" height="320" alt="" title=""/>
+            <img src="{{MEDIA_URL}}images/default/default_welcome.jpg" width="520" height="320" alt="" title=""/>
         {% elif  object.title == 'Our Proposal' %}
-            <img src="{{MEDIA_URL}}images/default/default_proposal.jpg" width="540" height="320" alt="" title=""/>
+            <img src="{{MEDIA_URL}}images/default/default_proposal.jpg" width="520" height="320" alt="" title=""/>
         {% endif %}
     {% else %}
         {% if object.title == 'Welcome' or object.title == 'Our Proposal' %}
@@ -42,6 +46,10 @@
 
     {% endif %}
     {{ object.body | safe | linebreaks}}
+
+    {% if object.title == 'HomePage' %}
+        <img src="{{MEDIA_URL}}images/default/edit_info.jpg" width="540" height="320" alt="" title=""/>
+    {% endif %}
 
     {% if object.title == 'RSVP' %}
         <form method="post" action="/homepage/rsvp/thanks" enctype="multipart/form-data">
