--- a/wedding/templates/photologue/photo_list.html
+++ b/wedding/templates/photologue/photo_list.html
@@ -1,5 +1,6 @@
 {% extends "photologue/root.html" %}
 {% load url from future %}
+{% load date_diff %}
 
 {% block title %}Photo Album{% endblock %}
 
@@ -8,18 +9,34 @@
         {% if object_list_len > 20 %}
             <li style="color:white;"><a href="">Max Photos Added</a></li>
         {% else %}
-            <li><a href="/homepage/photo-album/create/{{logged_user.username}}">Add Photos (Max: 20)</a></li>
+            <li><a href="{% url 'photo_create' username=logged_user.username %}" class="btn btn-primary">Add Photos (Max: 20)</a></li>
         {% endif %}
     {% endif %}
 {% endblock navbar_right %}
 
+{% block heading %}
+    <h2 class='text-center'>
+        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
+        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!
+        {% if logged_user.is_authenticated %}
+            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+        {% endif %}
+    </h2>
+{% endblock %}
+
 {% block sidebar %}
     {% for page in page_list %}
-        {% if page.title != 'HomePage' %}
+        {% if logged_user.is_authenticated %}
             {% if page.title == 'Photo Album' %}
                 <a href="{% url 'gallery' username=username %}">{{page.title}}</a>
             {% else %}
                 <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+            {% endif %}
+        {% elif page.title != 'HomePage' %}
+            {% if page.title == 'Photo Album' %}
+                <a class='href_color' href="{% url 'gallery' username=username %}">{{page.title}}</a>
+            {% else %}
+                <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
             {% endif %}
         {% endif %}
     {% endfor %}
@@ -33,10 +50,10 @@
                 <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a>
                 {% if logged_user.is_authenticated %}
                     <form action="{% url 'photo_update' username=logged_user.username pk=photo.pk %}">
-                        <input type="submit" value="Edit Photo">
+                        <input type="submit" value="Edit Photo" class="btn btn-primary">
                     </form>
                     <form action="{% url 'photo_delete' username=logged_user.username pk=photo.pk %}">
-                        <input type="submit" value="Delete Photo">
+                        <input type="submit" value="Delete Photo" class="btn btn-primary">
                     </form>
                 {% endif %}
                 <br><br><br><br>
