--- a/wedding/templates/pages/page_list.html
+++ b/wedding/templates/pages/page_list.html
@@ -8,13 +8,11 @@
 {% endblock navbar_right %}
 
 {% block heading %}
-    <h2 class='text-center'>
-        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!
-        {% if logged_user.is_authenticated %}
-            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
-        {% endif %}
-    </h2>
+    {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
+    {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
+    {% if logged_user.is_authenticated %}
+        <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+    {% endif %}
 {% endblock %}
 
 {% block sidebar %}
@@ -32,7 +30,8 @@
     {{ object_list.values.0.body | safe | linebreaks}}
 
     {% if object_list.values.0.title == 'HomePage' %}
-        <img src="{{MEDIA_URL}}images/default/edit_info.jpg" width="540" height="320" alt="" title=""/>
+        <img src="{{MEDIA_URL}}images/default/edit_info.jpg" width="570" height="350" alt="" title=""/>
+        </video>
     {% endif %}
 
 {% endblock content %}
