--- a/wedding/templates/photologue/photo_list.html
+++ b/wedding/templates/photologue/photo_list.html
@@ -15,26 +15,24 @@
 {% endblock navbar_right %}
 
 {% block heading %}
-    <h2 class='text-center'>
-        {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
-        {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!
-        {% if logged_user.is_authenticated %}
-            <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
-        {% endif %}
-    </h2>
+    {{wedding_objects.values.0.groom_first_name|capfirst}} &  {{wedding_objects.values.0.bride_first_name|capfirst}}<br>
+    {{wedding_objects.values.0.wedding_date}} • {{wedding_objects.values.0.wedding_date | date_diff}} day{{wedding_objects.values.0.wedding_date | date_diff|pluralize}} to go !!<br>
+    {% if logged_user.is_authenticated %}
+        <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+    {% endif %}
 {% endblock %}
 
 {% block sidebar %}
     {% for page in page_list %}
         {% if logged_user.is_authenticated %}
             {% if page.title == 'Photo Album' %}
-                <a href="{% url 'gallery' username=username %}">{{page.title}}</a>
+                <a href="{% url 'photo_list' username=username %}">{{page.title}}</a>
             {% else %}
                 <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
             {% endif %}
         {% elif page.title != 'HomePage' %}
             {% if page.title == 'Photo Album' %}
-                <a class='href_color' href="{% url 'gallery' username=username %}">{{page.title}}</a>
+                <a class='href_color' href="{% url 'photo_list' username=username %}">{{page.title}}</a>
             {% else %}
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
             {% endif %}
@@ -46,8 +44,9 @@
 {% if object_list %}
     {% for photo in object_list %}
         <div style="width: 700px;">
-            <div class="gallery-photo" style="float: left; width: 150px;">
-                <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a>
+            <div class="photo_list-photo" style="float: left; width: 150px;">
+                <a href="{% url 'photo_detail' username=username pk=photo.pk %}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a><br>
+                {{photo.title}}
                 {% if logged_user.is_authenticated %}
                     <form action="{% url 'photo_update' username=logged_user.username pk=photo.pk %}">
                         <input type="submit" value="Edit Photo" class="btn btn-primary">
