--- a/wedding/templates/base.html
+++ b/wedding/templates/base.html
@@ -11,8 +11,13 @@
 
     <title>Wedding Website</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS >
+    <link href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css" rel="stylesheet"-->
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
     <link href="{{STATIC_URL}}css/jumbotron-narrow.css" rel="stylesheet">
@@ -25,63 +30,69 @@
     {% block head %}{% endblock %}
     <style>
         body {
-             margin: 0;
-             background: url('/media/images/default/bg_image2.jpg');
-             background-size: 100% 100%;
-             background-repeat:no-repeat;
+            margin: 0;
+            background: url('/media/images/default/bg_image2.jpg');
+            background-size: 100% 100%;
+            background-repeat:no-repeat;
             display: compact;
-             font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
         a.href_color {
-          color: #000;
-          &:hover {
-             color: #000;
-           }
+            color: #000;
+            &:hover {
+            color: #000;
+            }
         }
     </style>
   </head>
 
   <body>
 
-    <div class="container">
-
-        <nav role="navigation" class="navbar navbar-inverse">
-            <!-- Brand and toggle get grouped for better mobile display -->
+    <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="container">
             <div class="navbar-header">
-                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                {% block brand %}<a href="/" class="navbar-brand">Wedding Bells</a>{% endblock %}
+                <a class="navbar-brand" href="/">Wedding Bells</a>
             </div>
-            <!-- Collection of nav links, forms, and other content for toggling -->
-            <div id="navbarCollapse" class="collapse navbar-collapse">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>{% block navbar_right %}{% endblock %}</li>
-                    <li><div class="addthis_sharing_toolbox"></div></li>
+                    {% block navbar_right %}{% endblock %}
+                    <li class="active"><div class="addthis_sharing_toolbox"></div></li>
                 </ul>
             </div>
-        </nav>
-        <h2 class='text-center' style='color:#FFCC33;font-style:italic;font-weight:bold'>{% block heading %} {% endblock %}<br></h2><br>
+        </div>
+    </nav>
+    <hr>
 
+    <div class="container">
         <div class="row">
-            <div class="col-sm-3 sidebar">
+            <h2 class='text-center' style='color:#FFCC33;font-style:italic;font-weight:bold'>{% block heading %} {% endblock %}<br></h2><br>
+            <div class="col-xs-3 sidebar">
                 <ul class="nav nav-sidebar">
                     <li><img src="{% static 'img/base_image.png' %}" width="150" height="70"/></li>
                     <li style='font-style: italic;font-weight: bold;'>{% block sidebar %} {% endblock %}</li>
                 </ul>
             </div>
-            <div class="col-sm-offset-3 main" style='font-style: italic;font-weight: bold;'>
+            <div class="col-xs-offset-3 main" style='font-style: italic;font-weight: bold;'>
                 {% block content %} {% endblock %}
             </div>
         </div>
 
-      <div class="footer">
-        <p>&copy; Wedding Bells 2014</p>
-      </div>
-
+        <hr>
+        <div class="row">
+            <div class="col-sm-12">
+                <footer>
+                    <p>Copyright © 2014 Wedding Bells</p>
+                </footer>
+            </div>
+        </div>
     </div> <!-- /container -->
 
 
