--- a/wedding/templates/index.html
+++ b/wedding/templates/index.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
 {% block navbar_right %}
-    <li><a href="{% url 'account_signup' %}">Register</a></li>
-    <li><a href="{% url 'account_login' %}">Login</a></li>
+    <li class="active"><a href="{% url 'account_login' %}">Login</a></li>
+    {% if not logged_user.is_authenticated %}
+        <li class="active"><a href="{% url 'account_signup' %}">Join Free</a></li>
+    {% endif %}
 {% endblock navbar_right %}
 
 {% block sidebar %}
@@ -13,11 +15,11 @@
     {% endfor %}
 {% endblock %}
 
-{% block title %}
-    <div class="page-header">
-    <h1><img src="{{MEDIA_URL}}images/default/text.png" width="520" height="100" alt="" title=""/></h1>
-{% endblock title%}
-
 {% block content %}
+    <div class="page-header">
+        <img src="{{MEDIA_URL}}images/default/text.png" width="520" height="100" alt="" title=""/>
+    </div>
+    <p><center>Organize your wedding details and locations for your guests and allow them to RSVP online!<br>
+       Plus, you can tell your story, upload photos and add your events details.</center></p>
     <img src="{{MEDIA_URL}}images/default/wedding.png" width="520" height="320" alt="" title=""/>
 {% endblock content %}
