--- a/wedding/templates/pages/page_detail.html
+++ b/wedding/templates/pages/page_detail.html
@@ -4,9 +4,9 @@
 {% block navbar_right %}
     {% if logged_user.is_authenticated %}
         {% if page.title != 'HomePage' %}
-            <li><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}" class="btn btn-primary">Edit Page</a></li>
+            <li class="active"><a href="{% url 'page_update' username=logged_user.username slug=object.slug %}" class="btn">Edit Page</a></li>
         {% endif %}
-        <li><a href="{% url 'account_logout' %}" class="btn btn-primary">Logout</a></li>
+        <li class="active"><a href="{% url 'account_logout' %}" class="btn">Logout</a></li>
     {% endif %}
 {% endblock navbar_right %}
 
