--- a/wedding/templates/photologue/photo_list.html
+++ b/wedding/templates/photologue/photo_list.html
@@ -26,9 +26,9 @@
     {% for page in page_list %}
         {% if logged_user.is_authenticated %}
             {% if page.title == 'Photo Album' %}
-                <a href="{% url 'photo_list' username=username %}">{{page.title}}</a>
+                <a class='href_color' href="{% url 'photo_list' username=username %}">{{page.title}}</a>
             {% else %}
-                <a href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
+                <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
             {% endif %}
         {% elif page.title != 'HomePage' %}
             {% if page.title == 'Photo Album' %}
@@ -38,37 +38,37 @@
             {% endif %}
         {% endif %}
     {% endfor %}
-{% endblock sidebar %}
+{% endblock %}
 
 {% block content %}
-{% if object_list %}
-    {% for photo in object_list %}
-        <div style="width: 700px;">
-            <div class="photo_list-photo" style="float: left; width: 150px;">
-                <a href="{% url 'photo_detail' username=username pk=photo.pk %}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a><br>
-                {{photo.title}}
-                {% if logged_user.is_authenticated %}
-                    <form action="{% url 'photo_update' username=logged_user.username pk=photo.pk %}">
-                        <input type="submit" value="Edit Photo" class="btn btn-primary">
-                    </form>
-                    <form action="{% url 'photo_delete' username=logged_user.username pk=photo.pk %}">
-                        <input type="submit" value="Delete Photo" class="btn btn-primary">
-                    </form>
-                {% endif %}
-                <br><br><br><br>
+    {% if object_list %}
+        {% for photo in object_list %}
+            <div style="width: 700px;">
+                <div class="photo_list-photo" style="float: left; width: 150px;">
+                    <a href="{% url 'photo_detail' username=username pk=photo.pk %}"><img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}"/></a><br>
+                    {{photo.title}}
+                    {% if logged_user.is_authenticated %}
+                        <form action="{% url 'photo_update' username=logged_user.username pk=photo.pk %}">
+                            <input type="submit" value="Edit Photo" class="btn btn-primary">
+                        </form>
+                        <form action="{% url 'photo_delete' username=logged_user.username pk=photo.pk %}">
+                            <input type="submit" value="Delete Photo" class="btn btn-primary">
+                        </form>
+                    {% endif %}
+                    <br><br><br><br>
+                </div>
             </div>
-        </div>
-    {% endfor %}
-{% else %}
-<p>No photos were found.</p>
-{% endif %}
+        {% endfor %}
+    {% else %}
+        <p>No photos are available.</p>
+    {% endif %}
 
-<!--
-{% if is_paginated %}
-<p>{{ paginator.count }} photos total.</p>
-<div id="page_controls">
-    <p>{% if page_obj.has_previous %}<a href="{% url 'pl-photo-list' page_obj.previous_page_number %}">Previous</a> | {% endif %} page {{ page_obj.number }} of {{ paginator.num_pages }} {% if page_obj.has_next %}| <a href="{% url 'pl-photo-list' page_obj.next_page_number %}">Next</a>{% endif %}</p>
-</div>
-{% endif %}
--->
+    <!--
+    {% if is_paginated %}
+    <p>{{ paginator.count }} photos total.</p>
+    <div id="page_controls">
+        <p>{% if page_obj.has_previous %}<a href="{% url 'pl-photo-list' page_obj.previous_page_number %}">Previous</a> | {% endif %} page {{ page_obj.number }} of {{ paginator.num_pages }} {% if page_obj.has_next %}| <a href="{% url 'pl-photo-list' page_obj.next_page_number %}">Next</a>{% endif %}</p>
+    </div>
+    {% endif %}
+    -->
 {% endblock %}
