--- a/wedding/templates/pages/address_form.html
+++ b/wedding/templates/pages/address_form.html
@@ -7,7 +7,7 @@
 
 {% block sidebar %}
     {% for page in all_objects %}
-        <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a>
+        <a href="{% url 'page_detail' username=logged_user slug=page.slug %}">{{page.title}}</a><br>
     {% endfor %}
 {% endblock %}
 
