--- a/wedding/templates/pages/wedding.html
+++ b/wedding/templates/pages/wedding.html
@@ -17,6 +17,7 @@
 {% endblock head %}
 
 {% block content %}
+    <a href="{% url 'page_list' username=username %}" class="btn btn-success">Details Already Provided</a>
     <h2>Provide your details : </h2><br>
     <form name="myForm" action="" onsubmit="return validateForm()" method="post">{% csrf_token %}
         {% for field in form %}
