--- a/wedding/templates/photologue/photo_confirm_delete.html
+++ b/wedding/templates/photologue/photo_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block sidebar %}
     {% for page in all_objects %}
-        <a href="{% url 'page_detail' username=logged_user.username slug=page.slug %}">{{page.title}}</a>
+        <a href="{% url 'page_detail' username=logged_user.username slug=page.slug %}">{{page.title}}</a><br>
     {% endfor %}
 {% endblock %}
 
