--- a/wedding/templates/photologue/photo_form.html
+++ b/wedding/templates/photologue/photo_form.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block navbar_right %}
+    {% if logged_user.is_authenticated %}
+        <li class="active"><a href="{% url 'account_logout' %}" class="btn">Logout</a></li>
+    {% endif %}
+{% endblock navbar_right %}
+
 {% block sidebar %}
     {% for page in all_objects %}
-        <a href="{% url 'page_detail' username=logged_user.username slug=page.slug %}">{{page.title}}</a>
+        <a href="{% url 'page_detail' username=logged_user.username slug=page.slug %}">{{page.title}}</a><br>
     {% endfor %}
 {% endblock %}
 
